--- a/src/runtime/config/config.org
+++ b/src/runtime/config/config.org
@@ -12,16 +12,20 @@
 class Config:
 
     # Github admin user key
-    USER_KEY = "c015c625c82ad0611564e7f4dbf4c3c49c9180b7"
+    # USER_KEY = "c015c625c82ad0611564e7f4dbf4c3c49c9180b7"
 
     # Github org ID
     # ORG_ID = 26247085
 
     # Github org URL
-    ORG_URL = "https://github.com/test-platform-to-to-deleted/"
+    # ORG_URL = "https://github.com/test-platform-to-to-deleted/"
 
     # use Exceptions module here to show
     # "Cannot initialize error"
+
+    # Path of temporary directory
+    TMP_PATH = "/Users/sounakpradhan/Documents/test"
+
     def __init__(self):
         pass
 
