--- a/src/runtime/system/system.org
+++ b/src/runtime/system/system.org
@@ -7,8 +7,8 @@
 #+OPTIONS: ^:nil
 
 * The =System= class
-  There is only one =System= in the application. This =System= interacts with
-  the Github API and generates the experiment structure on the remote server.
+  There is only one =System= in the application. This =System= builds the
+  resource files in the temporary location
 
 ** Constructor
    The system cannot be initialized.
@@ -35,58 +35,25 @@ class System():
 #+NAME: methods_system
 #+BEGIN_SRC python
     @staticmethod
-    def get_user():
-        return Github(Config.USER_KEY).get_user()
+    def change_dir(path):
+        os.chdir(path)
 
     @staticmethod
-    def get_org(user):
-        for org in user.get_orgs():
-            if org.id == Config.ORG_ID:
-                return org
+    def create_dir(dir_name):
+        os.mkdir(dir_name)
 
     @staticmethod
-    def create_repo(org, name):
-        org.create_repo(name)
+    def clone_git_repo(url):
+        os.system('git clone %s' % url)
 
     @staticmethod
-    def get_repo(org, name):
-        for repo in org.get_repos():
-            if repo.name == name:
-                return repo
+    def get_files():
+        return os.listdir(os.getcwd())
 
     @staticmethod
-    def create_file(repo, new_file, path):
-        file_path = path + "/" + new_file
-        file_content = "This is the " + new_file + " file"
-        repo.create_file(file_path, new_file + " file", file_content)
-
-    @staticmethod
-    def gen_json_file(json_dump, filename):
-        # The file created is temporary ?
-        with open(filename, 'w+') as fp:
-            json.dump(json_dump, fp)
-
-    @staticmethod
-    def gen_lab_dir(labname):
-        os.mkdir(Config.LABPATH+"/"+labname)
-
-    @staticmethod
-    def del_lab_dir(labname):
-        rmtree(Config.LABPATH+"/"+labname)
-
-    @staticmethod
-    def pack_lab(labname):
-        command = "tar -czf "
-        command += Config.LABPATH + "/" + labname + ".tar.gz "
-        command += Config.LABPATH + "/" + labname
-        os.system(command)
-    
-    @staticmethod
-    def execute_python(script, args):
-        command = "python " + script
-        for a in args:
-            command += " " + a
-        os.system(command)
+    def build(file_name, output_path):
+        output_file_path = output_path + file_name.split('.')[0]+'.html'
+        os.system('pandoc -f org %s -o %s' % (file_name, output_file_path))
 
 #+END_SRC
 
@@ -94,11 +61,8 @@ class System():
    The system requires access to the os library
 #+NAME: imports_system
 #+BEGIN_SRC python
-from runtime.config.config import Config
 
-from github import Github
-import os, json
-from shutil import rmtree
+import os
 
 #+END_SRC
 
