--- a/src/runtime/system/system.org
+++ b/src/runtime/system/system.org
@@ -40,7 +40,8 @@ class System():
 
     @staticmethod
     def create_dir(dir_name):
-        os.mkdir(dir_name)
+        if os.listdr(os.getcwd()).index(dir_name) == -1:
+            os.mkdir(dir_name)
 
     @staticmethod
     def clone_git_repo(url):
