--- a/src/runtime/rest/index.org
+++ b/src/runtime/rest/index.org
@@ -1,4 +1,4 @@
-#+TITLE: REST Interface for translators
+#+TITLE: REST Interface for Resource Generator
 #+AUTHOR: VLEAD
 #+DATE: [2016-06-07 Tue]
 #+SETUPFILE: ../../org-templates/level-2.org
@@ -9,9 +9,9 @@
 * Introduction
   The REST package holds two modules
 
-  - [[./app.org][=App=]]
+  - =[[./app.org][App]]=
 
-  - [[./api.org][=API=]]
+  - =[[./api.org][API]]=
 
 * Tangle
 #+BEGIN_SRC python :eval no :tangle __init__.py
