--- a/src/runtime/system/index.org
+++ b/src/runtime/system/index.org
@@ -8,9 +8,9 @@
 * Introduction
   This package contains the following
 
-  - =[[./system.org][System]]=
+  - [[./system.org][=System=]]
   
-  - =[[./system-interface.org][System Interface]]=
+  - [[./system-interface.org][=System Interface=]]
 
 * Tangle
 #+BEGIN_SRC python :eval no :tangle __init__.py
