--- a/src/runtime/system/system.org
+++ b/src/runtime/system/system.org
@@ -52,15 +52,16 @@ class System():
         return os.listdir(os.getcwd())
 
     @staticmethod
-    def build(file_name, output_path):
-        output_file_path = output_path + file_name.split('.')[0]+'.html'
-        file_type = file_name.split('.')[-1]
-        os.system('pandoc -f %s %s -o %s' % (file_type, file_name, output_file_path))
+    def build():
+        os.system('make -k all')
 
     @staticmethod
     def del_dir(dir_name):
         os.system('rm -rf %s' % dir_name)
 
+    @staticmethod
+    def copy(source, dest):
+        os.system('cp -r %s %s' % (source, dest))
 #+END_SRC
 
 ** Imports
