--- a/src/runtime/config/config.org
+++ b/src/runtime/config/config.org
@@ -6,22 +6,12 @@
 #+OPTIONS: ^:nil
 
 * Introduction
+  This stores the configurational parameters, here the temporary path
+  for generating the resources.
 
 #+NAME: class_config
 #+BEGIN_SRC python
 class Config:
-
-    # Github admin user key
-    # USER_KEY = "c015c625c82ad0611564e7f4dbf4c3c49c9180b7"
-
-    # Github org ID
-    # ORG_ID = 26247085
-
-    # Github org URL
-    # ORG_URL = "https://github.com/test-platform-to-to-deleted/"
-
-    # use Exceptions module here to show
-    # "Cannot initialize error"
 
     # Path of temporary directory
     TMP_PATH = "/Users/adityatodi/projects/test"
