--- a/src/runtime/rest/api.org
+++ b/src/runtime/rest/api.org
@@ -6,8 +6,7 @@
 #+OPTIONS: ^:nil
 
 * Introduction
-  This document illustrates building of REST API for the resource-generator
-  using =pandoc=
+  This document illustrates building of REST API for the resource-generator.
 
 * REST
 ** Blueprint
@@ -18,6 +17,7 @@ api = Blueprint('APIs', __name__)
 #+END_SRC
 
 ** index route
+   This route redirects to the index.org of the documentation.
 #+NAME: index_route
 #+BEGIN_SRC python
 @api.route("/", methods=['GET'])
@@ -26,7 +26,8 @@ def index(): # redirect to index.org of documentation
 
 #+END_SRC
 
-** API heading
+** =/resource= API
+   This API creates the resource from the content and then pushes it to the content-server.
    
 *** API design
     
